Stop nav from scrolling on mobile (#126)

--- a/css/mobile_guides.css
+++ b/css/mobile_guides.css
@@ -1,6 +1,10 @@
 /**
     Header Styling
 */
+header {
+  position: relative;
+}
+
 .header-container {
   flex-direction: column;
 }
